po: update po/hu_HU/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/batch.po
+++ b/po/hu_HU/batch.po
@@ -3,15 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013,2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013,2015-2016
 # Zoltán Reizinger <zreizinger@hdsnet.hu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:45-0400\n"
-"PO-Revision-Date: 2015-03-15 08:22+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 10:45+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
-"Language-Team: Hungarian (http://www.transifex.com/projects/p/civicrm/language/hu/)\n"
+"Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,6 +33,10 @@ msgstr "Tranzakció megtekintése/hozzáadása a köteghez "
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Köteg újramegnyitása"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr "Köteg törlése"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -59,12 +63,52 @@ msgid "No export format selected."
 msgstr "Export formátum nincs kiválasztva."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Exportálás dátuma"
+msgid "Batch ID"
+msgstr "Köteg azonosító"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Elemek száma"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Köteg leírása"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Köteg létrehozója"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Köteg létrehozási dátuma"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Köteg módosítója"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Köteg módosítási dátuma"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Köteg okos csoport"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Köteg összesen"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Köteg elemek száma"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Köteg fizetési mód"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Köteg exportálási dátuma"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Köteg adatai"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -83,6 +127,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Tagság kötegelt adatbevitel"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Felajánlási befizetések kötegelt adatbevitele"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Hagyjuk figyelmen kívül az eltéréseket és dolgozzuk fel a köteget?"
 
@@ -91,16 +139,16 @@ msgid "Validate & Process the Batch"
 msgstr "Érvényesítse és dolgozza fel a köteget."
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Néhány mező kizárva."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "A lágy jóváírás összege nem lehet nagyobb mint a teljes összeg"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Tagság típusa kötelezően megadandó mező."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Nem rögzíthet egy felajánláshoz két befizetést egy kötegben."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -149,6 +197,10 @@ msgstr "Várható teljes összeg"
 msgid "Total amount entered"
 msgstr "Beírt teljes összeg"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Nyitott felajánlások(Határidő - Összeg)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Adatbeviteli kötegek"
@@ -170,65 +222,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Nem lett adatbeviteli köteg létrehozva ezen a weboldalon."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "Köteg azonosító"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Köteg címe"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Köteg leírása"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Köteg létrehozója"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Köteg létrehozási dátuma"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Köteg módosítója"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Köteg módosítási dátuma"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Köteg okos csoport"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Köteg összesen"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Köteg elemek száma"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
+msgid "Batch Payment Method"
 msgstr "Köteg fizetési mód"
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Köteg exportálási dátuma"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr "EgyedKöteg azonosító"
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Köteg adatai"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Felajánlási befizetések kötegelt adatbevitele"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr "EgyedKöteg tábla"
 
 #: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Nem rögzíthet egy felajánláshoz két befizetést egy kötegben."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr "Fájl vagy automatikusan kiválasztott típus mező(k) a kiválasztott profilban nem támogatott a több rekord frissítéshez."
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Nyitott felajánlások(Határidő - Összeg)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr "Kattintson az Érvényesítés és Feldolgozásra, ha beírta az összes elemet a kötegbe. De el is  mentheti és később folytathatja, bármikor később. "
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr "Az oszlopok sorrendje hozzáadható, eltávolítható vagy megváltoztatható, a megfelelő <a href=\"%1\" target=\"_blank\">Tömeges beviteli profil</a> szerkesztésével."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr "Egyedi mezők és személyes kampány oldal mező ha szükséges hozzáadható. "
