--- a/po/hu_HU/install.po
+++ b/po/hu_HU/install.po
@@ -3,14 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2014-2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:49-0400\n"
-"PO-Revision-Date: 2015-03-14 16:26+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 20:13+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
-"Language-Team: Hungarian (http://www.transifex.com/projects/p/civicrm/language/hu/)\n"
+"Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -123,6 +123,16 @@ msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
 msgstr "Az auto_increment_increment 1-nél nagyobb értéke jelenleg nem támogatott. Kérem nézze meg a CRM-7923 hibajegyet a részletekért és a potenciális megkerülő megoldásokért. "
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr "A megadott adatbázis név érvényes?"
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr "A megadott adatbázis név nem érvényes. Kérem csak a 0-9. a-z, A-Z és az _ karaktereket használja a névben."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
