--- a/po/hu_HU/pcp.po
+++ b/po/hu_HU/pcp.po
@@ -4,12 +4,12 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:47+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 10:49+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -34,6 +34,10 @@ msgstr "Szerkeszd az oldalad"
 msgid "Tell Friends"
 msgstr "Mesélj erről a barátoknak"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "Ezen oldal URL-je "
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Kapcsolat információinak frissítése"
@@ -47,8 +51,8 @@ msgid "Approval required"
 msgstr "Jóváhagyás szükséges"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Támogató profil"
+msgid "Owner Email Notification"
+msgstr "Tulajdonos e-mail értesítés"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -68,15 +72,15 @@ msgstr "'Személyes kampány olal létrehozása' linkjének szövege"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr "Ez az esemény regisztráció <strong>%1</strong> -nak köszönhetően jött létre, aki a mi kampányunkat támogatja."
+msgstr "Ez az esemény regisztráció <strong>%1</strong> felhasználónak köszönhetően jött létre, aki a mi kampányunkat támogatja."
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
-msgstr "Ez az adomány <strong>%1</strong> -nak köszönhetően jött létre, aki a mi kampányunkat támogatja."
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
+msgstr "Ez az adomány <strong>%1</strong> felhasználónak köszönhetően jött létre, aki a mi kampányunkat támogatja."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -152,6 +156,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Támogatói profil nincs beállítva ehhez a Személyes Kampány oldalhoz vagy a profil fel van függesztve. Kérlek keresd meg a weboldal adminisztrátorát ha további segítségre van szükséged."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "Tulajdonos értesítés nincs beállítva ehhez a Személyes Kampány oldalhoz. Kérem keresse meg a weboldal adminisztrátorát ha további segítségre van szüksége."
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "Személyes Kampány oldal azonosítója"
@@ -186,6 +196,10 @@ msgid "Target Entity Type"
 msgstr "Cél Entitás Tipusa"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "Tulajdonos értesítés"
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Mesélj a barátodnak limit"
 
@@ -200,6 +214,10 @@ msgstr "Személyes Kampány oldal létrehozása - Második lépés"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Személyes Kampány oldal szerkesztésé lap"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr "Üdvözlet"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -234,26 +252,16 @@ msgid "Honor Roll"
 msgstr "Büszkeségfal"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Értesítsen e-mailen keresztül ha valaki adományoz az oldalamon"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Cél mennyiség értékének számnak kell lennie ami nagyobb mint 0."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "A gomb szövegének 64 karakternél rövidebbnek kell lennie."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "A kép vagy kép fájl nem lehet nagyobb, mint 360 x 360 képpont méretű."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "A kép méretei amit kiválasztottál %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Kérlek csökkentsd vagy vágd meg a fájlt vagy keress egy kisebb méretet és próbáld újra."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -359,10 +367,6 @@ msgstr "Oldal engedélyezve"
 msgid "Source Type"
 msgstr "Forrás tipusa"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Esemény oldala"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -437,6 +441,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Küldj emaileket amikkel meghívhatod a barátaidat hogy támogassák a kampányod."
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Másolja le ezt a linket és ossza meg az ismerőseivel!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Frissítsd a személyes elérhetőségeidet"
 
@@ -476,9 +484,15 @@ msgstr "Az adomány vagy a regisztrálás gomb szövege."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Ha ez az opció be van jelölve, egy \"büszkeségfalon\" jelenik meg a neve (vagy beceneve) az embereknek, akik támogatták a kampányt. (Az embereknek meg lesz a lehetőség, hogy névtelenek maradjanak. Az ő nevük nem lesz kiírva.)"
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Ha ez az opció be van jelölve, egy \"Dicsőség táblán\" jelenik meg a kampányt támogató személyek neve (vagy beceneve). (Az adományozók névtelenek is maradnhatnak. Az Ő nevük nem lesz kijelezve.)"
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "Ha ez az opció kiválasztott, e-mail értesítést kap, amikor az emberek a kampányához hozzájárulnak."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -488,10 +502,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Amikor a személyes kampányoldalak engedélyezettek, a hozzájárulók számára megjelenik egy link ami lehetőséget ad nekik a saját adománygyűjtő oldaluk létrehozására egy adomány után. Azok az adományozók akik egy Személyes Kampány oldalon keresztül érkeznek \"soft credit\" címszó alatt lesznek rögzítve annak számára aki létrehozta a kampány oldalt."
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr "Jóváhagyás"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -727,6 +737,38 @@ msgstr "Oldal nézet"
 msgid "Linked to Contribution Page"
 msgstr "Linkelve egy adományoldalhoz"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "Adományt kapott a személyes oldalán."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "Az ön adománygyűjtésének összege frissítésre került."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "Az adományozók információi alább kilistázva. Ha akarja, kapcsolatba léphet velük és megköszönheti nekik. "
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "Az adományozó neve hozzáadva a büszkeségfalhoz, kivéve ha az adományozók azt kérik, hogy ne legyenek rajta."
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "Valaki éppen most adományozott s személyes kampányoldalán"
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "Személyes kampányoldal tulajdonos értesítés"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -759,9 +801,9 @@ msgstr "Menj az oldaladra"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Amikor a saját kampányodat nézed BELÉPVE, az oldal tartalmaz linkeket ahhoz hogy szerkeszd\naz Add továbbot, vagy frissítsd a kapcsolat információidat."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr "Amikor a saját kampányoldalát nézi BELÉPVE, az oldal tartalmaz linkeket ahhoz hogy szerkessze oldalát, meséljen róla a barátainak vagy frissítse a kapcsolat információját."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -779,9 +821,10 @@ msgstr "Kérdések? Külddj emailt"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "A személyes kampány oldalad felül lett vizsgálva. Volt néhány probléma a tartalommal⏎  ami miatt nem tudjuk jóváhagyni azt. Bocsánat a kellemetlenségekért."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr "A személyes kampány oldala felül lett vizsgálva. Volt néhány probléma a tartalommal, ami miatt nem tudjuk jóváhagyni azt. Bocsánat a kellemetlenségekért."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -876,102 +919,42 @@ msgstr "Kattins vagy illeszd be ezt a hivatkozást a böngésződbe és kövesd 
 msgid "Click or paste this link into your browser"
 msgstr "Kattins vagy illeszd be ezt a linket a böngésződbe"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "Ezen oldal URL-je "
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr "személyes kampányoldal blokk"
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Másolja le ezt a linket és ossza meg az ismerőseivel!"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr "Hőmérőt használjunk?"
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Ha ez az opció be van jelölve, egy \"Dicsőség táblán\" jelenik meg a kampányt támogató személyek neve (vagy beceneve). (Az adományozók névtelenek is maradnhatnak. Az Ő nevük nem lesz kijelezve.)"
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr "Büszkeségfalat mutassuk?"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "Tulajdonos e-mail értesítés"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Ez az esemény regisztráció <strong>%1</strong> felhasználónak köszönhetően jött létre, aki a mi kampányunkat támogatja."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Ez az adomány <strong>%1</strong> felhasználónak köszönhetően jött létre, aki a mi kampányunkat támogatja."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "Tulajdonos értesítés nincs beállítva ehhez a Személyes Kampány oldalhoz. Kérem keresse meg a weboldal adminisztrátorát ha további segítségre van szüksége."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr "Tulajdonost értesítsük?"
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "Tulajdonos értesítés"
+msgid "PCP Block ID"
+msgstr "személyes kkampányoldal azonosító"
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Értesítsen e-mailen keresztül ha valaki adományoz az oldalamon"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr "Cél egyed"
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "Ha ez az opció kiválasztott, e-mail értesítést kap, amikor az emberek a kampányához hozzájárulnak."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr "Cél egyed azonosító"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "Adományt kapott a személyes oldalán."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr "Jóváhagyás szükséges?"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "Az ön adománygyűjtésének összege frissítésre került."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr "Add tovább engedélyezve?"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "Az adományozók információi alább kilistázva. Ha akarja, kapcsolatba léphet velük és megköszönheti nekik. "
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "Az adományozó neve hozzáadva a büszkeségfalhoz, kivéve ha az adományozók azt kérik, hogy ne legyenek rajta."
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "Valaki éppen most adományozott s személyes kampányoldalán"
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "Személyes kampányoldal tulajdonos értesítés"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "Amikor a saját kampányoldalát nézi BELÉPVE, az oldal tartalmaz linkeket ahhoz hogy szerkessze oldalát, meséljen róla a barátainak vagy frissítse a kapcsolat információját."
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "A személyes kampány oldala felül lett vizsgálva. Volt néhány probléma a tartalommal, ami miatt nem tudjuk jóváhagyni azt. Bocsánat a kellemetlenségekért."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr "Add tovább korlát"
