po: update po/hu_HU/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/pledge.po
+++ b/po/hu_HU/pledge.po
@@ -5,12 +5,12 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:48+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 20:19+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -50,12 +50,12 @@ msgid "Pledge Payment Status"
 msgstr "Pénzbeli felajánlások státusza"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - esedékes %2 (túllépés)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - esedékes %2 (túllépés)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - esedékes %2 "
+msgid "%1 - due on %2"
+msgstr "%1 - esedékes %2 "
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -79,14 +79,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Felajánlás gyakoriságának időköze"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Felajánlás státusza %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Felajánlás kifizetési státusza %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Teszt felajánlás"
 
@@ -97,6 +89,10 @@ msgstr "Pénzügyi típus - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Pénzügyi oldal - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "Kapcsolat azonosító %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -146,10 +142,6 @@ msgstr "Felajánlás módosítási dátuma"
 msgid "Pledge Cancelled Date"
 msgstr "Felajánlás törlési dátuma"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Felajánlás tiszteletbeli kapcsolata"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Emlékeztetők maximális száma"
@@ -188,12 +180,12 @@ msgid "Reminders Sent"
 msgstr "Emlékeztetők kiküldve"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Ütemezett felajánlás szerkesztése"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Felajánlás fizetési ütemezés frissítve."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Felajánlás általa"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -300,6 +292,10 @@ msgid "Pledger Name or Email"
 msgstr "Felajánló neve vagy e-mailcíme"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Felajánló neve"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Felajánlók keresése"
 
@@ -308,12 +304,10 @@ msgid "Delete Pledges"
 msgstr "Felajánlások törlése"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Törölt felajánlás(ok): %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Az összes kiválasztott felajánlás(ok): %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count felajánlás törölve"
+msgstr[1] "%count felajánlások törölve"
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -322,6 +316,30 @@ msgstr "Felajánlások nyomtatása"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "CiviCRM Felajánlás Motor"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "CiviFelajánlás hozzáférés"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "felajánlások megtekintése"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "felajánlások szerkesztése"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Felajánlások létrehozása és szerkesztése"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "törlés a CiviFelajánlásban"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Felajánlások törlése"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -339,11 +357,11 @@ msgid ""
 "pledge payments."
 msgstr "Ennek a felajánlásnak a törlése törölni fog bármilyen ütemezett ( és még nem befejeződött ) felajánlás kifizetését is."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Felajánlás megtekintése"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Felajánlás szerkesztése"
 
@@ -351,7 +369,7 @@ msgstr "Felajánlás szerkesztése"
 msgid "Cancel Pledge"
 msgstr "Felajánlás visszavonása"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Felajánlás törlése"
 
@@ -372,20 +390,12 @@ msgid "Pledge Search"
 msgstr "Felajánlás keresése"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Felajánlások kinyomtatása"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Felajánlások exportálása"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Ütemezett felajánlás szerkesztése"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "A felajánlás kifizetésének várható dátuma."
+msgid "Adjust scheduled amount"
+msgstr "Helyesbített ütemezett összeg "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -394,10 +404,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Ön nem lesz képes visszaigazolás küldésére ehhez a felajánláshoz, mert nincs e-mail címe rögzítésvee ehhez a kapcsolathoz. Ha szeretne egy elismervényt  küldeni, mikor ez a felajánlás rögzítésre kerül, kattintson a Mégse gombra, majd a Szerkesztés gombra az Összegzés lapon, hogy megadhasson egy e-mail címet mielőtt a felajánlás rögzítésre kerül."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Új felajánlás"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -414,6 +420,10 @@ msgid ""
 msgstr "Fontolja meg ennek a felajánlásnak a felfüggesztését kérem hogyha fenn akarja tartani ennek a ellenőrzéshez kapcsolódó információkat és el akarja kerülni a kifizetési adatok elvesztését.  Ahhoz hogy a felajánlást Felfüggesztve állapotra módosítsa és hogy töröljön minden még eddig ki nem fizetett felajánlást, először kattintson a Felfüggesztésre ezen az űrlapon. Ezek után kattintson a &gt további linkekre a felajánlás listáján, és válassza a Felfüggesztés műveletet."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Felajánlás általa"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -421,6 +431,7 @@ msgid ""
 msgstr "A felajánlás meg lett változtatva fizetési kiigazítások miatt. Az eredeti felajánlás ennyi volt: %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "ennek a részlete"
 
@@ -443,10 +454,6 @@ msgstr "A felajánlás kifizetésének dátuma."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Automatikus email visszaigazolás ehhez a felajánláshoz %1-nek?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Egy automatikus jóváhagyási email erről a felajánlásról -nak"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -472,20 +479,12 @@ msgstr "A felajánlások \"függőben\" vannak amik az első kifizetés meg nem 
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Kattintson az OKra hogy elmentse ezt a Felajánlást ÉS külddjön egy jóváhagyást %1 nak azonnal"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Kattintson az OK-ra hogy elmentse ezt a Felajánlás rekordot ÉS küldjön egy nyugtázást %1 részére azonnal."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Felajánlás általa"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "részlet tőle"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "mindegyik"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -512,10 +511,6 @@ msgid "Payments Ended Date"
 msgstr "Kifizetések befejezési dátuma"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Nem található egyező felajánlás."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -528,8 +523,16 @@ msgid ""
 msgstr "Ha a dátum vagy összeg tartományban keres, próbáljon meg tágabb értéktartományt megadni."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Kattintson %1re hogy láthassa a felajánlott befizetéseket."
+msgid "Click arrow to view pledge payments."
+msgstr "Kattintson a nyílra a felajánlott befizetések megtekintésére."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Mutassa a befizetéseket"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Befizetések elrejtése"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -549,10 +552,6 @@ msgstr "Kifizetendő"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Indulási dátum"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Felajánlás téve"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -603,20 +602,12 @@ msgid "Amount Paid"
 msgstr "Kifizetett összeg"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Kifizetés megnézése</a>"
+msgid "Credit Card Payment"
+msgstr "Bankkártyás fizetés"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Rögzített kifizetés (csekk, készpénz, EFT ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Bankkártyás kifizetés </a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Ütemezett összeg szerkesztése</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Ütemezett befizetés szerkesztése"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -636,9 +627,10 @@ msgstr "Annak érdekében hogy emlékeztetőt kelljen kiküldeni:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "A webhely rendszergazdájának konfigurálnia kell a biztosított szkriptet, amely frissíti a felajánlások kifizetési állapotát és elküldi az emlékeztetőket (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "A webhely rendszergazdájának konfigurálnia kell az ütemezett feladatokat (Adminisztrál>Rendszerbeállítások>Ütemezett feladatok), amely frissíti a felajánlások kifizetési állapotát és elküldi az emlékeztetőket."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -658,13 +650,17 @@ msgstr "Beérkezett felajánlások %1től a kezdetek óta."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Kattintson a  <a href='%1'>Felajánlás hozzáadása</a> gombra hogy rögzítsen egy új felajánlást ettől a kapcsolattól."
+msgstr "Kattintson a  <a %1>Felajánlás hozzáadása</a> gombra hogy rögzítsen egy új felajánlást ettől a kapcsolattól."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Nincsenek felajánlások rögzítve ehhez a kapcsolathoz."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr "Az adományok %1 tiszteletére érkeztek"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -790,94 +786,38 @@ msgstr "Köszönjük a nagylelkü támogatásod."
 msgid "Pledge Payment Reminder"
 msgstr "Felajánlással kapcsolatos kifizetési emlékeztető"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - esedékes %2 (túllépés)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - esedékes %2 "
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Törölt felajánlás(ok): %1 (Összes kiválasztott: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Helyesbített ütemezett összeg "
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Kattintson az OK-ra hogy elmentse ezt a Felajánlás rekordot ÉS küldjön egy nyugtázást %1 részére azonnal."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Kattintson a nyílra a felajánlott befizetések megtekintésére."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Mutassa a befizetéseket"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Befizetések elrejtése"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Bankkártyás fizetés"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Ütemezett befizetés szerkesztése"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "A webhely rendszergazdájának konfigurálnia kell az ütemezett feladatokat (Adminisztrál>Rendszerbeállítások>Ütemezett feladatok), amely frissíti a felajánlások kifizetési állapotát és elküldi az emlékeztetőket."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Kattintson a  <a %1>Felajánlás hozzáadása</a> gombra hogy rögzítsen egy új felajánlást ettől a kapcsolattól."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr "Felajánlás köszönetnyilvánításelküldve"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "Kapcsolat azonosító %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr "Felajánlás köszönetnyilvánítás nincs elküldve"
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "Felajánló neve"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr "Köszönetnyilvánítás elküldve?"
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count felajánlás törölve"
-msgstr[1] "%count felajánlások törölve"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr "Kérem adjon meg egy számot"
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "CiviFelajánlás hozzáférés"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr "Kérem adja meg a számot."
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "felajánlások megtekintése"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr "Felajánlás blokk azonosítója"
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "felajánlások szerkesztése"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr "Mutassa a gyakorisági időközet"
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Felajánlások létrehozása és szerkesztése"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr "Felajánlások exportálása"
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "törlés a CiviFelajánlásban"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Felajánlások törlése"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr "Kezdési dátum"
