--- a/po/hu_HU/grant.po
+++ b/po/hu_HU/grant.po
@@ -5,14 +5,14 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-04-26 07:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 20:20+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
-"Language-Team: Hungarian (http://www.transifex.com/projects/p/civicrm/language/hu/)\n"
+"Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,14 +38,6 @@ msgstr "Támogatás határideje NULL "
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Adományozási döntés dátuma NULL"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Támogatás típus %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Támogatás állapot %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -92,10 +84,6 @@ msgid "Grant report received"
 msgstr "Adomány jelentés megérkezett"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Adomány típusának azonosítója"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Összeg adományozva "
 
@@ -107,10 +95,6 @@ msgstr "Támogatás pénzneme"
 msgid "Grant Rationale"
 msgstr "Támogatás indoklása"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Adomány státuszának azonosítója"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Támogatási report beérkezett?"
@@ -118,6 +102,10 @@ msgstr "Támogatási report beérkezett?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Kérvényezett összeg <br />(eredeti pénznem)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Jelentkező"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -128,12 +116,10 @@ msgid "Delete Grants"
 msgstr "Támogatások törlése"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Törölt adomány(ok): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Az összes kiválasztott adomány(ok): %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count támogatás törölve."
+msgstr[1] "%count támogatások törölve."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -144,30 +130,46 @@ msgid "Update Grants"
 msgstr "Adományok frissítése"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Frissített adomány(ok) : %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Frissített adomány(ok): %1 (Összes kiválasztott: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "CiviTámogatás hozzáférés"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Összes támogatás megtekintése"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "támogatások szerkesztése"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Támogatások létrehozása és frissítése"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "CiviTámogatás törlése"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Támogatások törlése"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "adományok"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Támogatója"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Adomány megtekintése"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Adomány szerkesztése"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Biztosan törölni akarod ezt az adományt?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Adomány törlése"
 
@@ -180,16 +182,8 @@ msgid "Granted"
 msgstr "Támogatott"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Adományok kinyomtatása"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Adományok exportálása"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Új támogatás"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -210,6 +204,14 @@ msgstr "Mely napon lett az adomány összege átutalva. "
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(eredeti pénznem)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Támogatás állapota(ok)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Támogatás típus(ok)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -303,61 +305,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Ez az oldal listázza %1 összes adományát a kezdetektől fogva. "
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Kattinson az <a accesskey='N' href='%1'>Adomány hozzáadása</a> hogy rögz1tse az adományt ennek a kapcsolatnak."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Kattinson az <a %1>Adomány hozzáadására</a>, hogy rögzítse az adományt ehhez a kapcsolathoz."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Nincsenek adományok rögzítve ehhez a kapcsolathoz."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Jelentkező"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr "Adományok exportálása"
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Frissített adomány(ok): %1 (Összes kiválasztott: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Kattinson az <a %1>Adomány hozzáadására</a>, hogy rögzítse az adományt ehhez a kapcsolathoz."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count támogatás törölve."
-msgstr[1] "%count támogatások törölve."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "CiviTámogatás hozzáférés"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Összes támogatás megtekintése"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "támogatások szerkesztése"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Támogatások létrehozása és frissítése"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "CiviTámogatás törlése"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Támogatások törlése"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Támogatás állapota(ok)"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Támogatás típus(ok)"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr "Adományok frissítése"
