--- a/po/id_ID/batch.po
+++ b/po/id_ID/batch.po
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-11-27 22:25+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,6 +32,10 @@ msgstr "Lihat/Tambah Transaksi ke Kumpulan"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Buka ulang Kumpulan"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -58,12 +62,52 @@ msgid "No export format selected."
 msgstr "Tidak ada bentuk keluaran dipilih."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Tanggal Diekspor"
+msgid "Batch ID"
+msgstr "ID Kumpulan"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Jumlah barang"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Gambaran Kumpulan"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Kumpulan Dibuat Oleh"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Tanggal Pembuatan Kumpulan"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Kumpulan Dirubah Oleh"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Tanggal Kumpulan Dirubah"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Kumpulan Kelompok Pintar"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Jumlah Kumpulan"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Kumpulan Angka dari Barang"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Kumpulan Alat Pembayaran"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Kumpulan Tanggal Diekspor"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Kumpulan Data"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -82,6 +126,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Kumpulan Data Masukan untuk Keanggotaan"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Kumpulan Data Masukan untuk Pembayaran Janji"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Abaikan Ketidakcocokan & Olah Kumpulan?"
 
@@ -90,16 +138,16 @@ msgid "Validate & Process the Batch"
 msgstr "Sahkan dan Olah Kumpulan"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Beberapa bidang tidak disertakan"
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Bilangan kredit lunak tidak boleh lebih besar datipada jumlah bilangan"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Jenis keanggotaan adalah bidang yang diharuskan."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Anda tidak dapat merekam dua pembayaran untuk janjiyang sama di kumpulan tunggal."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -148,6 +196,10 @@ msgstr "Jumlah bilangan diharapkan"
 msgid "Total amount entered"
 msgstr "Jumlah bilangan dimasukkan"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Janji Terbuka (Tanggal Jatuh Tempo - Bilangan)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Kumpulan Data Masuk"
@@ -169,65 +221,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Tidak ada Kumpulan Data Masukan dibuat untuk ditus ini."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "ID Kumpulan"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Judul Kumpulan"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Gambaran Kumpulan"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Kumpulan Dibuat Oleh"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Tanggal Pembuatan Kumpulan"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Kumpulan Dirubah Oleh"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Tanggal Kumpulan Dirubah"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Kumpulan Kelompok Pintar"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Jumlah Kumpulan"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Kumpulan Angka dari Barang"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Kumpulan Alat Pembayaran"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Kumpulan Tanggal Diekspor"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Kumpulan Data"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Kumpulan Data Masukan untuk Pembayaran Janji"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Anda tidak dapat merekam dua pembayaran untuk janjiyang sama di kumpulan tunggal."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Janji Terbuka (Tanggal Jatuh Tempo - Bilangan)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
