--- a/po/hu_HU/queue.po
+++ b/po/hu_HU/queue.po
@@ -1,17 +1,17 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-#   <zreizinger@hdsnet.hu>, 2012.
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-11-27 18:40+0000\n"
-"Last-Translator: r4zoli <zreizinger@hdsnet.hu>\n"
-"Language-Team: Hungarian (http://www.transifex.com/projects/p/civicrm/language/hu/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 09:19+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
+"Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,3 +37,7 @@ msgstr "Sorban álló elem adatai"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Queue Runner"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr "Sor azonosítója"
