po: update po/id_ID/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/menu.po
+++ b/po/id_ID/menu.po
@@ -10,9 +10,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 04:26+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -129,8 +129,8 @@ msgid "Case Activity"
 msgstr "Tempat Aktivitas"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Pelaporan Tempat"
+msgid "Case Activity Audit"
+msgstr "Pemeriksaan Aktiftas Kasus"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -149,8 +149,8 @@ msgid "Assign to Another Client"
 msgstr "Tetapkan ke Klien Lain"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Bangun Aktivitas di Kasus"
+msgid "File on Case"
+msgstr "Berkas di Kasus"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -174,10 +174,6 @@ msgstr "Status Kasus"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Media Pertemuan"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Ubah Status Aktivitas"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -252,6 +248,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Tipe Finansial"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Pembayaran Baru"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -269,9 +269,15 @@ msgstr "Menerima Kartu Kredit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Jenis Kartu Kredit"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Sumbangan"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Sumbangan Berulang"
@@ -322,6 +328,23 @@ msgstr "Kumpulan Akuntansi"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Keluarkan Kumpulan Akuntansi"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Lihat Pembayaran"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Setelan Komponen CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Tagihan PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Tagihan Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -475,6 +498,11 @@ msgstr "Cari Preferensi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Pilihan Tanggal"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu Navigasi"
 
@@ -508,10 +536,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Pengingat Jadwal"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Ini Tidak Boleh Dilihat"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -529,6 +553,11 @@ msgstr "Format cetak halaman (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Pilihan Gaya Komunikasi"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Format Email Sambutan"
 
@@ -542,9 +571,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Format Alamat"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Bahasa, Mata Uang, Lokasi"
+msgid "Languages, Currency, Locations"
+msgstr "Bahasa, Mata Uang, Tempat"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -695,10 +725,6 @@ msgid "Administer CiviCRM"
 msgstr "Mengelola CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Nilai Pilihan"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Penetapan Harga"
 
@@ -766,10 +792,6 @@ msgstr "Pembangun Pencarian"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Pencarian Pilihan"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Pencarian Sederhana"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -861,6 +883,10 @@ msgid "CiviCRM Blog"
 msgstr "Blog CIviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Kasus Dashlet"
 
@@ -915,6 +941,10 @@ msgid "Import Activities"
 msgstr "Impor Kegiatan"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Impor Data Penyesuaian Nilai-banyak"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Tingkatkan CiviCRM"
 
@@ -951,12 +981,16 @@ msgid "Browse Uploaded files"
 msgstr "Telusuri File yang Telah di Upload"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "Hapus Berkas"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Keluar"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "API CiviCRM "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -970,6 +1004,10 @@ msgstr "UnitQ"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "PenyuntingProfil"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Tanggal Penegasan"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1066,6 +1104,10 @@ msgid "Event Online Registration"
 msgstr "Pendaftaran Kegiatan Maya"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Ulangi Kegiatan"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Celah Pertemuan"
 
@@ -1099,6 +1141,10 @@ msgstr "Pindahkan Dari Keranjang"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Lihat Keranjang"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Rubah Pilihan Pendaftaran"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1153,8 +1199,8 @@ msgid "Resubscribe"
 msgstr "Pendaftaran Kembali"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Keluaran"
+msgid "Opt-out"
+msgstr "Sisihkan"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1289,6 +1335,11 @@ msgstr "Daftar Laporan"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Berita CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1427,6 +1478,16 @@ msgstr "Temukan SMS besar-besaran"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Uji A/B Baru"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Kelola Uji A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Laporan Keanggotaan"
 
@@ -1532,11 +1593,6 @@ msgstr "Lokalisasi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Bahasa, Mata Uang, Tempat"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Pilihan Bahasa yang Disukai"
 
@@ -1554,6 +1610,11 @@ msgstr "Perizinan (Kendali Akses)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Pengaturan Sistem"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1622,6 +1683,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Keadaan Hadiah"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1632,8 +1698,13 @@ msgstr "Semua Laporan"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Bantuan"
+msgid "Support"
+msgstr "Dukungan"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Mulai"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1642,18 +1713,43 @@ msgstr "Dokumentasi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Majelis Masyarakat"
+msgid "Ask a question"
+msgstr "Berikan pertanyaan"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Ikut Serta"
+msgid "Get expert help"
+msgstr "Dapatkan bantuan ahli"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Tentang"
+msgid "About CiviCRM"
+msgstr "Tentang CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Daftarkan situs anda"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Gabung CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Pengembang"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "Penjelajah API"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Dokumen Pengembang"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1880,6 +1976,11 @@ msgstr "Sediakan rincian transaksi untuk semua penyumbang dan pembayaran, termas
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Menyediakan informasi tentang keadaan sumbangan berulang"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Ringkasan Keanggotaan"
 
@@ -2049,144 +2150,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Laporan rinci untuk meneliti, telepon-bank, daftar jalan atau survei lain."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Pemeriksaan Aktiftas Kasus"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Pembayaran Baru"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Jenis Kartu Kredit"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "Lihat Pembayaran"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Pilihan Gaya Komunikasi"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Impor Data Penyesuaian Nilai-banyak"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Rubah Pilihan Pendaftaran"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Keadaan Hadiah"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Pengembang"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "Penjelajah API"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Dokumen Pengembang"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "Berkas di Kasus"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Setelan Komponen CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Tagihan PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Tagihan Email"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Pilihan Tanggal"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Hapus Berkas"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "API CiviCRM "
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Tanggal Penegasan"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Ulangi Kegiatan"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Sisihkan"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Uji A/B Baru"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Kelola Uji A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Dukungan"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "Mulai"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Berikan pertanyaan"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Dapatkan bantuan ahli"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "Tentang CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Daftarkan situs anda"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Gabung CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Menyediakan informasi tentang keadaan sumbangan berulang"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
